# wagtail-cms-demo

./: .gitignore  Dockerfile  Taskfile.yml  docker-compose.yml  manage.py  pyproject.toml
demosite/: models.py  urls.py
demosite/migrations/: 0001_initial.py
proxy/: nginx.conf
tests/: test_wagtail_demo.py
wagtail_demo/: asgi.py  settings.py  urls.py  wsgi.py
