[tool.poetry]
name = "wagtail-demo"
version = "0.1.0"
description = ""
authors = ["Kenneth V. Domingo <hello@kvdomingo.xyz>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.2"
djangorestframework = "^3.13.1"
django-cors-headers = "^3.11.0"
djangorestframework-camel-case = "^1.3.0"
wagtail = "^2.16.1"
gunicorn = "^20.1.0"
whitenoise = "^6.0.0"
Pillow = "^9.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"
python-dotenv = "^0.19.2"

[tool.black]
line-length = 120
target-version = ['py39']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
